1.29.9:
	* initial version of PNS coding
	* Intensity Stereo coding
	* more speed improvements
	* finer bandwidth/cutoff setting (doesn't work with PNS)
	* fixed more bugs
	* rewritten mid/side coding
	* fixed bug in blockswitch
1.29.8
	* changed default mode to ABR 64kbps/channel
	* implemented short windows grouping
	* new huffman coder
	* SSE quantizer
	* modified functioning of ABR mode (-b option)
	* improved autotools support
	* allowed even higher bitrates, including ADTS
	* framebuffer size bug fixed
	* removed broken object types: Main and LTP
	* some mp4 atoms fixed for better compalibility
	* stdin seek bug fixed
1.29.7
	* quantizer tweaked to better support high bitrates
	* allow higher quality for mp4 files (-q 5000 max)
	* removed mid frequency boost (it turned out useless)
	* cutoff frequency adjusted to fully utilize upper band
	* --help-long option removed, it was just an alias for -H
	* -b option bug fixed
1.29.6:
	- quality related bug fixed
1.29.5:
	- updated manpage
	- check if output file exists; --overwrite option added
	- help/usage options reorganized
	- block switching is now tuned to match quality/bitrate
	- give more quality to lower frequancies (less to highs)
	- quantizer updated again
1.29.4:
	- rewritten quantizer: faster, diffrerent quality, different bitrates
	- ftyp atom: set brands like itunes does, shoud be more compatible
	  with picky tools
	- new option(--tag) to add named tags (iTunes '----')
	- faster and better short/long window type switch
	- Don't build DRM(Digital Radio Mondiale) by default.
	  Use ./configure --enable-drm to build DRM version.
	- fixed bugs
	  * rounding in QuantizeReflectionCoeffs (tns.c)
	  * use +60 value for scalefactor.
	  * use clipped diff instead of original value (huffman.c)
1.29.3:
	- MP4 tag options improved
	- fixed MP4 'meta' atom bug
	- new option to set verbosity (-v0 to silence output)

1.29.2:
	- new mp4 output code

1.29:
	- various patches applied and bugs fixed
