@@ -1,3 +1,4 @@
+	* fixed max MP4 bitrate calculation
 1.29.9:
 	* initial version of PNS coding
 	* Intensity Stereo coding
